; ModuleID = '/home/carl/AnghaBench/linux/sound/ppc/extr_pmac.c_snd_pmac_beep_dma_stop.c'
source_filename = "/home/carl/AnghaBench/linux/sound/ppc/extr_pmac.c_snd_pmac_beep_dma_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pmac = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@DBDMA_STOP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_pmac_beep_dma_stop(%struct.snd_pmac* %0) #0 {
  %2 = alloca %struct.snd_pmac*, align 8
  store %struct.snd_pmac* %0, %struct.snd_pmac** %2, align 8
  %3 = load %struct.snd_pmac*, %struct.snd_pmac** %2, align 8
  %4 = getelementptr inbounds %struct.snd_pmac, %struct.snd_pmac* %3, i32 0, i32 1
  %5 = call i32 @snd_pmac_dma_stop(i32* %4)
  %6 = load i32, i32* @DBDMA_STOP, align 4
  %7 = call i32 @cpu_to_le16(i32 %6)
  %8 = load %struct.snd_pmac*, %struct.snd_pmac** %2, align 8
  %9 = getelementptr inbounds %struct.snd_pmac, %struct.snd_pmac* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32 %7, i32* %12, align 4
  %13 = load %struct.snd_pmac*, %struct.snd_pmac** %2, align 8
  %14 = call i32 @snd_pmac_pcm_set_format(%struct.snd_pmac* %13)
  ret void
}

declare dso_local i32 @snd_pmac_dma_stop(i32*) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @snd_pmac_pcm_set_format(%struct.snd_pmac*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
